MyPL/tests/negative/err_bad_token.logic
# Negative: '@' is not a valid token in MyPL
parent(bat, b@d).
